table in vignette: changed function names for interval search
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@154 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/vignettes/c060_vignette.Rnw
+++ b/vignettes/c060_vignette.Rnw
@@ -561,13 +561,13 @@ Function & Description \\
 \code{stabsel} & estimates a stable set of variables and allows to control the PFER, PCER or FWER\\
 \code{plot.stabpath} & displays stability path and indicates estimated stable features\\
 \hline
-\code{EPSGO}              &Finds an optimal solution\\
-\code{summary.int.search}  &Summary method for interval search models\\
+\code{epsgo}              &Finds an optimal solution\\
+\code{summary.intsearch}  &Summary method for interval search models\\
 \code{tune.glmnet.interval} &Wrapper function for 'glmnet' objects.\\
-\code{plot.summary.int.search} &Plot Summary object for interval search models\\
+\code{plot.sum.intsearch} &Plot Summary object for interval search models\\
 \hline
 \end{tabular}
-\caption{\label{tab:functions} Overview of available functions. The first block shows functions to calculate and visualize resampling based prediction errors for penalized Cox and binomial models. The second block shows all provided functions to perform interval search and the last block functions to perform stability selection.}
+\caption{\label{tab:functions} Overview of available functions. The first block shows functions to calculate and visualize resampling based prediction errors for penalized Cox and binomial models. The second block shows all provided functions to perform stability selection  and the last block functions to perform interval search.}
 \end{table}
 \end{center}
 %\clearpage
