more final editing
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@160 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/vignettes/c060_vignette.Rnw
+++ b/vignettes/c060_vignette.Rnw
@@ -353,7 +353,7 @@ For this purpose the \proglang{R} package \pkg{peperr} \citep{Porz2009,peperr} p
 Wrapper functions for new or customized prediction model algorithms can be defined and passed to the generic call function \code{peperr}.  
 In case of prognostic models for survival endpoints, algorithm-specific wrapper functions are required for model fitting, tuning and prediction. Wrapper functions for selected machine learning approaches are already implemented, but not yet for the \pkg{glmnet} package.
 
-With the \pkg{peperr} package prediction accuracy of survival models is by default assessed with prediction error curves based on the time-dependent Brier score, but it is also possible to define and use customized accuracy measures. We have implemented additional wrapper functions for the \pkg{glmnet} algorithm for fitting (\code{fit.glmnet}) and tuning (\code{complexity.glmnet}) the model, and predicting survival probabilities (\code{predictProb.glmnet}) based on the fitted model and the estimated baseline hazard from the training data. We here want to assess the prognostic value of the $L_1$-penalized Cox PH regression model fitted in the previous section. The $.632+$ subsampling-based bootstrap estimator is calculated using 1000 bootstrap samples. The \pkg{peperr} package is designed for high-dimensional covariates data and allows for various parallel computation setups.
+With the \pkg{peperr} package prediction accuracy of survival models is by default assessed with prediction error curves based on the time-dependent Brier score, but it is also possible to define and use customized accuracy measures. We have implemented additional wrapper functions for the \pkg{glmnet} algorithm for fitting (\code{fit.glmnet}) and tuning (\code{complexity.glmnet}) the model, and predicting survival probabilities (\code{predictProb.glmnet}) based on the fitted model and the estimated baseline hazard from the training data using the Breslow estimator. We here want to assess the prognostic value of the $L_1$-penalized Cox PH regression model fitted in the previous section. The $.632+$ subsampling-based bootstrap estimator is calculated using 1000 bootstrap samples. The \pkg{peperr} package is designed for high-dimensional covariates data and allows for various parallel computation setups.
 Also, additional arguments can be passed directly to the \pkg{glmnet} call by specifing additional arguments for the corresponding fitting and/or tuning procedure.
 Here, we include patient age as a mandatory feature, i.e., age is not subject to penalization, and 
 run the calculation on 3 CPUs in parallel using a socket cluster setup. 
@@ -390,8 +390,8 @@ Plot.peperr.curves(obj, at.risk=TRUE, allErrors=FALSE, bootRuns=FALSE,
 \label{fig:pec}
 \end{figure}
 
-Note, that for classification models for binary endpoints, both fitting and tuning of the model are done by the same wrapper function. Therefore for binary responses, the \pkg{peperr} package does not provide quite the same modular flexibility as for time-to-event endpoints. The predicted class probability is calculated within the generic performance/aggregation function by calling the algorithm-specific predict function. Whenever a new algorithm is incorporated, the generic aggregation function needs to be adapted accordingly.
-Model performance measures for classification tasks that are shipped with the \pkg{peperr} package are the misclassification rate and the Brier score. We have extended the functionality of the \pkg{peperr} functions for calculating the Brier score (\code{aggregation.brier}) and the misclassification rate (\code{aggregation.misclass}) to allow their use with the \pkg{glmnet} algorithm. In addition, we have implemented the area under the receiver operating characteristic (ROC) curve (AUC) as an additional performance measure for binary responses (\code{aggregation.auc}). For classification models, there are numerous alternative \proglang{R} and Bioconductor packages available to assess models fitted with \pkg{glmnet}. A good starting point is the package \pkg{caret} \citep{caret}.
+For classification models for binary endpoints, both tuning and fitting of the model are done with the same wrapper functions as used for the Cox regression. Model performance measures for classification tasks that are shipped with the \pkg{peperr} package are the misclassification rate and the Brier score. The predicted class probability is calculated within each generic performance function by calling the algorithm-specific predict function. Whenever a new algorithm/method is applied, the generic performance/aggregation function needs to be adapted accordingly. Therefore for binary responses, the \pkg{peperr} package does not provide quite the same modular flexibility as for time-to-event endpoints where prediction and performance assessment are done in separate functions.
+We have extended the functionality of the \pkg{peperr} functions for calculating the Brier score (\code{aggregation.brier}) and the misclassification rate (\code{aggregation.misclass}) to allow their use with the \pkg{glmnet} algorithm. In addition, we have implemented the area under the receiver operating characteristic (ROC) curve (AUC) (\code{aggregation.auc}) as an alternative performance measure for binary response classifications. An example is included in the corresponding help file. For classification models, there are numerous alternative \proglang{R} and Bioconductor packages available to assess models fitted with \pkg{glmnet}. A good starting point is the package \pkg{caret} \citep{caret}.
 
 An alternative implementation of the time-dependent Brier score for assessing the prognostic performance of prognostic models for time-to-event endpoints can be found in the package \pkg{pec} \citep{MIG2012}. The basic approach is similar to \pkg{peperr}, i.e. one has to define a wrapper for each fitting procedure in order to determine the estimated survival probabilities. Just as for \pkg{peperr}, no wrapper for \pkg{glmnet} is available yet with the \pkg{pec} package. The main difference of \pkg{peperr} compared to \pkg{pec} is that the tuning of the hyper-parameter and the fitting procedure are done in two separate steps, which reflects the usual workflow for high-dimensional data analysis better. While \pkg{pec} provides additional prediction accuracy measures for survival models, such as the time-dependent c-index, it cannot be used to assess classification models for binary endpoints. One strong point of the implementations of both \pkg{peperr} and \pkg{pec} is their easy-to-use setup for using resampling methods for internal validation. In addition to the use of prediction error curves and time-dependent Brier scores, another popular approach for assessing the prediction accuracy of survival models is the use of time-dependent ROC and AUC curves, for which many implementations exist, for example in \proglang{R} packages \pkg{timeROC} \citep{timeROC}, \pkg{survivalROC} \citep{survivalROC} and \pkg{risksetROC} \citep{risksetROC}. 
 
@@ -555,7 +555,7 @@ Function & Description \\
 \code{aggregation.auc} & Determine the area under the ROC curve for a fitted model\\
 \code{complexity.glmnet} & Interface for determination of penalty \code{lambda} in \code{glmnet} models via cross-validation\\ 
 \code{fit.glmnet} & Interface function for fitting a penalized regression model with \code{glmnet}\\
-\code{plot.peperr.curves} & Plot method for prediction error curves of a \code{peperr} object\\
+\code{Plot.peperr.curves} & Plot method for prediction error curves of a \code{peperr} object\\
 \code{predictProb.coxnet} &  Extract predicted survival probabilities from a \code{coxnet} fit \\
 \code{predictProb.glmnet} & Extract predicted survival probabilities from a \code{glmnet} fit \\
 \hline
