fix caret reference
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@161 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/vignettes/c060.bib
+++ b/vignettes/c060.bib
@@ -269,8 +269,8 @@
 
 @MANUAL{caret,
   title = {\pkg{caret}: Classification and Regression Training},
-  author = {Max Kuhn, contributions from Jed Wing and Steve Weston and Andre
-	Williams and Chris Keefer and Allan Engelhardt and Tony Cooper},
+  author = {Max Kuhn and Jed Wing and Steve Weston and Andre Williams and Chris
+	Keefer and Allan Engelhardt and Tony Cooper},
   year = {2013},
   note = {\proglang{R} package version 5.17-7},
   url = {http://CRAN.R-project.org/package=caret}
