--- a/vignettes/c060_vignette.Rnw
+++ b/vignettes/c060_vignette.Rnw
@@ -451,7 +451,10 @@ The following code specifies the required objects and parameter values for optim
   foldid <- balancedFolds(class.column.factor=y[,2], cross.outer=nfolds)
 @
 
-The task is to find a setting of tuning parameter values $\left(\alpha,\lambda\right)$, for which the \Sexpr{nfolds}-fold cross-validated penalized (partial) log likelihood deviance of the model is minimal.  The wrapper function \\
+The task is to find a setting of tuning parameter values $\left(\alpha,\lambda\right)$, for which the \Sexpr{nfolds}-fold cross-validated penalized (partial) log likelihood deviance of the model is minimal.  More precisely, the optimal $\lambda$ is choosen as the largest value of $\lambda$ such that cv-error is within one standard error of the minimum.
+
+
+The wrapper function \\
 \code{tune.glmnet.interval} calculates the (partial) log likelihood deviance of a model with given tuning parameter setting $\left(\alpha,\lambda\right)$.
 
 The second tuning parameter $\lambda$ will be found for each given $\alpha$ via the computation of the entire regularization path with the \code{glmnet} function. For each given $\alpha$ an optimal $\lambda$ is defined as the largest value of $\lambda$ such that the loss function value is within one standard error of the minimum (\code{type.min ='lambda.1se'}).
@@ -498,7 +501,7 @@ Summary information can be extracted from the \code{fit} object using the \code{
 sumint <- summary(fit, verbose=TRUE)
 @
 
-At the initial step we sample 21 points in the parameter space for $\alpha$. Those points are randomly distributed and uniformly cover the whole interval 
+At the initial step we sample 21 points in the parameter space for $\alpha$ as suggested in the algorithm. Those points are randomly distributed and uniformly cover the whole interval 
 (0,1]. A Gaussian process model is trained based on these initial points. Then, iteratively, new points are added to the Gaussian process model in order to find an optimal combination of tuning parameter values. In total, \Sexpr{nrow(sumint$info)} iterations were needed to reach the optimum. 
 
 <<interval_search_cox_fit_opt, echo=FALSE,results=hide>>=
