--- a/vignettes/c060_vignette.Rnw
+++ b/vignettes/c060_vignette.Rnw
@@ -28,7 +28,7 @@
 \definecolor{gradbegin}{rgb}{0.6,0.1,0.6} % purple
 
 \author{Martin Sill\\
-\And Thomas Hielscher\\ \hspace{3.95 cm} Divison of Biostatistics (C060) \\  \hspace{4.3 cm} German Cancer Research Center, Heidelberg
+\And Thomas Hielscher\\ \hspace{3.95 cm} Division of Biostatistics (C060) \\  \hspace{4.3 cm} German Cancer Research Center, Heidelberg
 \And Natalia Becker\\
 \And Manuela Zucknick\\}
 \title{\pkg{c060}: Extended Inference with Lasso and Elastic-Net Regularized Cox and Generalized Linear Models}
@@ -373,7 +373,7 @@ obj  <- peperr(response=Surv(pData(eset)$os, pData(eset)$os_status),
 @
 
 Bootstrap results can be visualized with the \code{plot.peperr} function from the \pkg{peperr} package showing the selected complexity parameters, 
-out-of-bag prediction error curves as well as the prediction error integrated over time, and the predictive partial log-likelihood (PLL) values. In order to calculate the predictive PLL values again, an algorithm-specific wrapper (here \code{PLL.coxnet}) needs to be provided. In addition, we provide a slightly modified version of the prediction error curves plot function from the \pkg{peperr} package, which allows the display of the numbers of samples still at risk and pointwise bootstrap quantiles (\code{Plot.peperr.curves}) as shown in Figure~\ref{fig:pec}. By default, the $.632+$ bootstrap estimate is calculated and displayed. Optionally, one can additionaly display the $.632$ estimator, the no-information error rate and the average out-of-bag bootstrap error in \code{Plot.peperr.curves} by setting the option \code{allErrors=TRUE}. \\
+out-of-bag prediction error curves as well as the prediction error integrated over time, and the predictive partial log-likelihood (PLL) values. In order to calculate the predictive PLL values again, an algorithm-specific wrapper (here \code{PLL.coxnet}) needs to be provided. In addition, we provide a slightly modified version of the prediction error curves plot function from the \pkg{peperr} package, which allows the display of the numbers of samples still at risk and pointwise bootstrap quantiles (\code{Plot.peperr.curves}) as shown in Figure~\ref{fig:pec}. By default, the $.632+$ bootstrap estimate is calculated and displayed. Optionally, one can additionally display the $.632$ estimator, the no-information error rate and the average out-of-bag bootstrap error in \code{Plot.peperr.curves} by setting the option \code{allErrors=TRUE}. \\
 
 <<peperrPlot1, echo=TRUE, results=hide, fig=FALSE,eval=FALSE>>=
 Plot.peperr.curves(obj, at.risk=TRUE, allErrors=FALSE, bootRuns=FALSE,
@@ -438,7 +438,7 @@ Furthermore, we have observed that these features are not very stable and 4 of t
 
 In this section we fit an elastic net model instead of lasso to the same data set. As outlined above, fitting an elastic net model requires the simultaneous tuning of two parameters $\alpha$ and $\lambda$. For this computationally challenging task, we use the interval search algorithm in an efficient implementation in \proglang{R} function \code{EPSGO}. The EPSGO algorithm was originally implemented for support vector machines in the \proglang{R} package \pkg{penalizedSVM} \citep{becker2009,penSVM}. Here we provide a version for \code{glmnet} and in addition \code{summary} and \code{plot} functions to illustrate the interval search results.
 
-The following code specifies the required objects and parameter values for optimising the tuning parameters of the elastic net Cox model. The \code{balancedFolds} function splits the data into balanced folds for 10-fold cross-validation.
+The following code specifies the required objects and parameter values for optimizing the tuning parameters of the elastic net Cox model. The \code{balancedFolds} function splits the data into balanced folds for 10-fold cross-validation.
 <<interval_search_setup,results=hide>>=
   x <- t(exprs(eset))
   y <- cbind(time=pData(eset)$os,status=pData(eset)$os_status)
@@ -451,14 +451,9 @@ The following code specifies the required objects and parameter values for optim
   foldid <- balancedFolds(class.column.factor=y[,2], cross.outer=nfolds)
 @
 
-The task is to find a setting of tuning parameter values $\left(\alpha,\lambda\right)$, for which the \Sexpr{nfolds}-fold cross-validated penalized (partial) log likelihood deviance of the model is minimal.  More precisely, the optimal $\lambda$ is choosen as the largest value of $\lambda$ such that cv-error is within one standard error of the minimum.
+Usually, the task is to find a setting of tuning parameter values $\left(\alpha,\lambda\right)$, for which the \Sexpr{nfolds}-fold cross-validated penalized (partial) log likelihood deviance of the model is minimal. Here, however, the optimal $\lambda$ is chosen as the largest value of $\lambda$ such that the loss function is within one standard error of the minimum, which will result in a smaller model (a strategy suggested by the authors of the \pkg{glmnet} package). That is, for each given $\alpha$ an optimal $\lambda$ is found via the computation of the entire regularization path with the \code{glmnet} function with option \code{type.min ='lambda.1se'}.
 
-
-The wrapper function \\
-\code{tune.glmnet.interval} calculates the (partial) log likelihood deviance of a model with given tuning parameter setting $\left(\alpha,\lambda\right)$.
-
-The second tuning parameter $\lambda$ will be found for each given $\alpha$ via the computation of the entire regularization path with the \code{glmnet} function. For each given $\alpha$ an optimal $\lambda$ is defined as the largest value of $\lambda$ such that the loss function value is within one standard error of the minimum (\code{type.min ='lambda.1se'}).
-
+The wrapper function \code{tune.glmnet.interval} calculates the (partial) log likelihood deviance of a model with given tuning parameter setting $\left(\alpha,\lambda\right)$.
 
 <<interval_search_cox_show, echo=TRUE, eval=FALSE>>=
   fit <- epsgo(Q.func="tune.glmnet.interval", 
@@ -501,7 +496,7 @@ Summary information can be extracted from the \code{fit} object using the \code{
 sumint <- summary(fit, verbose=TRUE)
 @
 
-At the initial step we sample 21 points in the parameter space for $\alpha$ as suggested in the algorithm. Those points are randomly distributed and uniformly cover the whole interval 
+At the initial step we sample 21 points in the parameter space for $\alpha$ as suggested for the original algorithm by the authors of \citep{froehlich2005}. Those points are randomly distributed and uniformly cover the whole interval 
 (0,1]. A Gaussian process model is trained based on these initial points. Then, iteratively, new points are added to the Gaussian process model in order to find an optimal combination of tuning parameter values. In total, \Sexpr{nrow(sumint$info)} iterations were needed to reach the optimum. 
 
 <<interval_search_cox_fit_opt, echo=FALSE,results=hide>>=
@@ -523,7 +518,7 @@ names(cofn.lasso) %in% names(cofn)
 plot(sumint)
 @
 \end{center}
-\caption{Partial log likelihood deviance as a function of both tuning parameters $\alpha$ and log$\lambda$ when fitting the elastic net Cox model for the AML data set. For each evaluated point in the parameter space the number of selected features in the corresponding model is printed next to the data point symbol. Rectangles correspond to initially selected $\alpha$ values. The solid red lines highlight the final solution with minimal partial log likelihood deviance. }
+\caption{Cross-validated partial log likelihood deviance as a function of both tuning parameters $\alpha$ and log$\lambda$ when fitting the elastic net Cox model for the AML data set. For each evaluated point in the parameter space the number of selected features in the corresponding model is printed next to the data point symbol. Rectangles correspond to initially selected $\alpha$ values. The solid red lines highlight the final solution where the loss function is within one standard error of the minimum. }
 \label{fig:interval_search1}
 \end{figure}
 
